--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,115 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --color-bg1: #2F404D;
+    --color-bg2: #44535F;
+    --color-primary: #E2DDDF;
+    --color-secondary: #85EBD9;
+    --color-tertiary: #3D898D;
+
+    --conatainer-width-lg: 75%;
+    --conatainer-width-md: 86%;
+    --conatainer-width-s: 90%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
-    background-color: aqua;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    background: var(--color-bg1);
+    color: var(--color-primary);
+    line-height: 1.5;
+}
+
+.container {
+    width: var(--conatainer-width-lg);
+    margin: 0 auto;
+    padding: 16px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h2, h3, h4 {
+    font-weight: 500;
+    color: var(--color-primary);
+    text-align: center;
+    width: auto;
+    padding: 16px 0;
+}
+
+h1 {
+    font-size: 4rem;
+    font-weight: 500;
+    color: var(--color-primary);
+    width: auto;
+}
+
+h2 {
+    font-size: 3.5rem;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2.25rem;
+}
+
+p {
+    font-weight: 300;
+    font-size: 1rem;
+    color: var(--color-primary);
+    text-align: justify;
+    width: auto;
+    height: auto;
+    padding: 16px 0;
+}
+
+.button__primary {
+    width: 235px;
+    height: 77px;
+    background: none;
+    border-radius: 50px;
+    border: 3px solid var(--color-secondary);
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: var(--color-secondary);
+
+}
+
+.button__primary:hover {
+    background: var(--color-secondary);
+    border: 3px solid var(--color-tertiary);
+    color: var(--color-tertiary);
+}
+
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--conatainer-width-md);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: var(--conatainer-width-s);
+    }
 }
