--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ p {
     width: auto;
     height: auto;
     padding: 16px 0;
+    line-height: 1.7;
 }
 
 .button__primary {
@@ -99,6 +100,7 @@ p {
     background: var(--color-secondary);
     border: 3px solid var(--color-tertiary);
     color: var(--color-tertiary);
+    transition: 0.3s ease;
 }
 
 
