--- a/src/features/media-button/MediaButton.css
+++ b/src/features/media-button/MediaButton.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
+    margin: 0 1rem;
     cursor: pointer;
 }
 
