--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,8 +14,9 @@
     
 }
 
-.menu__open-icon,
-.menu-name {
+.menu__open-section,
+.menu__close-icon,
+.menu_mobile-section{
     display: none;
 }
 
@@ -41,15 +42,100 @@
 
 @media screen and (max-width: 1024px) {
 
-    .nav-menu {
-        display: none;
-    }
-    .menu__open-icon {
-        display: block;
-    }
+
 
     .header img{
        display: none;
     }
 }
 
+@media screen and (max-width: 768px) {
+
+    .header {
+        display: flex;
+    }
+
+    .header img {
+        display: block;
+        width: 77px;
+        height: 57px;
+    }
+
+    .my-cv {
+        display: none;
+    }
+
+    .nav-menu {
+        display: none;
+    }
+
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: -100%;
+        left: 0;
+        opacity: 1;
+        transition: 1s ease;
+        border: 3px solid var(--color-tertiary);
+    }
+
+    .nav-menu.nav-active {
+        background: var(--color-bg1);
+        top: 0;
+        opacity: 1;
+        transition: 0.5s ease;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5vh;
+        padding-bottom: 20px;
+        z-index: 10;
+        
+      }
+
+    .nav-active a {
+        font-size: 1.5rem;
+        color: var(--color-primary);
+        width: auto;
+        text-transform: uppercase;
+    }
+
+    .menu_mobile-section {
+        width: auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu-name{
+        font-size: 36px;
+        color: var(--color-primary);
+    }
+
+    .menu__close-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 46px;
+        color: var(--color-primary);
+    }
+
+    .menu__open-section {
+        display: block;
+    }
+
+    .menu__open-section i {
+        font-size: 36px;
+        color: var(--color-primary);
+    }
+
+    
+    .menu__close-icon {
+        display: block;
+        color: var(--color-primary);
+    }
+}
