--- a/src/features/media-button/MediaButton.css
+++ b/src/features/media-button/MediaButton.css
@@ -19,3 +19,16 @@
     width: 33px;
     height: 33px;
 }
+
+.media-button:hover {
+    background-image: url(../../assets/triangle-hover.svg);
+    transition: 0.4s ease; 
+}
+
+.media-button:hover i {
+    font-size: 33px;
+    color:var(--color-tertiary);
+    width: 33px;
+    height: 33px;
+    transition: 0.4s ease; 
+}
