--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -16,8 +16,11 @@
     align-items: center;
 }
 
+.hero__CV {
+    display: none;
+}
+
 .hero_info-my-photo {
-    
     background-image:
     linear-gradient(to right, 
         rgba(61, 139, 143, 0.4) 0%,
@@ -73,8 +76,17 @@
 }
 
 @media screen and (max-width: 1024px) {
+
+    .hero__info {
+        align-items: center;
+    }
+
     .hero_info-description {
-        height: 350px;
+       height: auto;
+    }
+
+    .hero__CV {
+        display: block;
     }
     
     .hero_info-my-photo {
@@ -88,10 +100,15 @@
 }
 
 @media screen and (max-width: 768px) {
+    .hero {
+        align-items: center;
+    }
+    
     .hero__info {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
     }
 
     .hero_info-description {
@@ -99,8 +116,22 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 350px;
+        height: auto;
         width: auto;
+        padding: 0 1rem 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .hero_info-my-photo {
+        background-size: 100%;
+        background-position-y: 30%;
+        margin-bottom:2rem;
+    }
+
+    .hero_info-left-dots {
+        top: 82%;
+        right: 1%;
+        z-index: 1;
     }
 
     .hero__media {
