--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -1,15 +1,17 @@
-.header{
+.xddd
+
+.nav-bar {
     height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header img{
+.nav-bar img{
     align-items: flex-end;
 }
 
-.header img {
+.nav-bar img {
     max-height: 113px;
     
 }
@@ -42,61 +44,49 @@
 
 @media screen and (max-width: 1024px) {
 
-
-
-    .header img{
-       display: none;
+    .nav-bar__CV {
+        display: none;
     }
 }
 
 @media screen and (max-width: 768px) {
 
-    .header {
+    .nav-bar {
         display: flex;
     }
 
-    .header img {
+    .nav-bar img {
         display: block;
         width: 77px;
         height: 57px;
     }
 
-    .my-cv {
-        display: none;
-    }
-
-    .nav-menu {
-        display: none;
-    }
-
     .nav-menu {
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         width: 100%;
         height: 100%;
         position: absolute;
         top: -100%;
         left: 0;
         opacity: 1;
-        transition: 1s ease;
+        transition: 0.3s ease-in;
         border: 3px solid var(--color-tertiary);
+        padding: 2rem 0;
+        gap: 5vh;
+        z-index: 10;
     }
 
     .nav-menu.nav-active {
         background: var(--color-bg1);
         top: 0;
         opacity: 1;
-        transition: 0.5s ease;
-        z-index: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 5vh;
-        padding-bottom: 20px;
-        z-index: 10;
-        
-      }
+        transition: 0.5s ease-out;
+    }
 
+    .nav-menu a,
     .nav-active a {
         font-size: 1.5rem;
         color: var(--color-primary);
@@ -104,10 +94,20 @@
         text-transform: uppercase;
     }
 
-    .menu_mobile-section {
-        width: auto;
+    .nav-menu li {
+        width: 100%;
+    }
+
+    .nav-link {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .menu_mobile-section {
+        width: 100%5;
+        display: flex;
+        justify-content: space-around;
     }
 
     .menu-name{
@@ -117,9 +117,6 @@
 
     .menu__close-icon {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         font-size: 46px;
         color: var(--color-primary);
     }
