--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ h4 {
 @media screen and (max-width: 768px) {
     .container {
         width: var(--conatainer-width-s);
+        padding: 16px 0 0 0;
     }
 
     h1 {
