--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -1,44 +1,31 @@
-.about-me {
+#about-me {
     background: var(--color-bg2);
-    height: auto;
+}
+
+.about-me__container {
+    align-items: center;
+}
+
+.about-me__text-box {
+    max-width: 820px;
 }
 
 .about-me__speciality {
     display: flex;
     justify-content: center;
     gap: 64px;
-}
-
-.about-me__speciality li {
-    width: 288px;
-    height: auto;
-    border: 3px solid var(--color-secondary);
-    border-radius: 50px;
-}
-
-.about-me__speciality div {
-    padding: 0 16px;
+    padding: 16px 0;
 }
 
 .about-me__stack {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 3fr;
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 16px;
-    grid-row-gap: 0px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 1rem;
+    grid-column-gap: 10rem;
+    width: auto;
+    padding: 32px 0;
 }
-
-.l1 { grid-area: 1 / 1 / 2 / 3; }
-.l2 { grid-area: 2 / 1 / 3 / 3; }
-.li { grid-area: 3 / 1 / 4 / 3; }
-.li { grid-area: 4 / 1 / 5 / 3; }
-.li { grid-area: 5 / 1 / 6 / 3; }
-.li { grid-area: 6 / 1 / 7 / 3; }
-.li { grid-area: 1 / 3 / 2 / 5; }
-.li { grid-area: 2 / 3 / 3 / 5; }
-.li { grid-area: 3 / 3 / 4 / 5; }
-.li { grid-area: 4 / 3 / 5 / 5; }
-.li { grid-area: 5 / 3 / 6 / 5; }
 
 @media screen and (max-width: 768px) {
     .about-me__speciality {
