--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -19,11 +19,10 @@
 
 .about-me__stack {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-row-gap: 1rem;
+    grid-row-gap: 2rem;
     grid-column-gap: 10rem;
-    width: auto;
     padding: 32px 0;
 }
 
@@ -34,5 +33,9 @@
         justify-content: center;
         align-items: center;
         gap: 32px;
+    }
+
+    .about-me__stack {
+        grid-column-gap: 1rem;
     }
 }
