--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -1,25 +1,13 @@
-
-
 .navbar {
-    position: sticky;
     height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    top: 0;
     width: var(--conatainer-width-lg);
     margin: 0 auto;
     padding: 16px 0;
-    z-index: 5;
 }
 
-.navbar.active {
-    background: var(--color-bg1);
-    width: 100vw;
-    transition: 0.5s ease-in;
-    justify-content: center;
-    border-bottom: 3px solid var(--color-tertiary);
-} 
 
 .navbar.active .nav-bar__CV,
 .navbar.active .logo {
@@ -78,10 +66,11 @@
 @media screen and (max-width: 768px) {
 
     .navbar {
-        display: flex;
+        width: var(--conatainer-width-s);
     }
 
     .nav-menu {
+        position: inherit;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -106,6 +95,15 @@
         transition: 0.5s ease-out;
     }
 
+    .navbar .nav-menu.nav-active {
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100vw;
+    }
+
     .nav-menu a,
     .nav-active a {
         font-size: 1.5rem;
@@ -114,13 +112,9 @@
         text-transform: uppercase;
     }
 
+
     .nav-menu li {
         width: 100%;
-    }
-
-    
-    .nav-link {
-        display: none;
     }
     
     
@@ -131,7 +125,7 @@
     }
 
     .menu_mobile-section {
-        width: 100%5;
+        width: 100%;
         display: flex;
         justify-content: space-around;
     }
