--- a/src/components/about-me/AboutMe.css
+++ b/src/components/about-me/AboutMe.css
@@ -26,6 +26,17 @@
     padding: 32px 0;
 }
 
+@media screen and (max-width: 1024px) {
+    .about-me__speciality {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 32px;
+    }
+}
+
+
 @media screen and (max-width: 768px) {
     .about-me__speciality {
         display: flex;
