--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -23,6 +23,7 @@
 .projects-items__item img {
     max-width: 346px;
     width: 100%;
+    height: 300px;
     border-radius: 50px;
     border: 3px solid var(--color-tertiary);
 }
