--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -63,6 +63,14 @@
     border-radius: 50px;
 }
 
+
+
+.hero_info-buttons {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
 .hero__media {
     display: flex;
     align-items: center;
@@ -143,5 +151,10 @@
 
     .hero__media span {
         margin-bottom: 16px;
+    }
+
+    .hero_info-buttons {
+        flex-direction: column;
+        gap: 8px;
     }
 }
